1.1.7/md/框架更新日志.md

### 更新说明
> 2023/02/23 框架 `1.1.1` 版本发布

> 2023/03/10 本次由 `1.1.1` 版本更新为 `1.1.2` 版本
* 框架“控制台级别”运行日志部署，用于简洁的记录测试用例的执行情况(通过、失败、异常)。
* 允许外部脚本调用框架的日志记录函数 `INFO()`，该函数将会把测试人员自定义的一些log添加到框架的运行日志中，方便测试人员查看。
* 新增sheet表单条用例执行选择逻辑，测试人员可以通过指定“用例编号”来执行测试用例(动态参数加载、静态参数加载均支持该功能)。
* 新增“工作目录(非框架)必要文件、文件夹筛查逻辑”，若指定的文件或者文件夹不存在则框架不执行(动态参数加载、静态参数加载均支持该功能)。
* 修正元素个数比对断言关键字 `elementNumber_assert()` 不支持处理python计算表达式的问题。
* 修正在多个用例文件同时执行时，测试结果汇总sheet表同名被替换的问题。
* 修正在多个用例步骤文件同时执行时，测试结果汇总数据被覆盖的问题。
* 修正在用例执行阻塞时(例如执行过程中打开用例步骤文件，框架失去操作权限)，测试汇总结果记录为0的问题。
* 修正文本运行日志中debug级别的日志信息中文乱码的问题。

> 2023/05/22 本次由 `1.1.2` 版本更新为 `1.1.3` 版本
* 修复1.1.2版本中存在的缺陷问题，优化框架中的不合理逻辑。
* 删除“用例数据包路径指定”逻辑，改为由框架自动识别。
* 删除测试报告的excel文件展示形式，改由更加简洁的html文件展示。
* 删除框架中对excel用例文件的“写”操作，将每条用例步骤的“执行时间”、“执行结果”以及“异常信息”体现在测试报告中，保障用例数据的安全性。
* 降低用例书写和存放规则的复杂度，提高自由度，支持自定义用例书写和存放规则。
* excel测试用例书写格式支持灵活选择 (在测试用例书写过程中可根据实际情况选择“区分”或“不区分”元素节点数据)，且书写格式的限制单位为“单条用例”。
* 框架可供使用者自行新建的数据文件(静态启动参数配置文件、用例初始化清除脚本...)，均支持名称自定义。
* 重构“辅助文件路径替换逻辑”，用例书写者可根据个人喜好来决定所书写的文件路径是否需要框架动态处理。
* 新增“测试报告名称自定义”命令可选参数 `--log`，使用者可根据实际情况来决定测试报告的名称。

> 2023/06/13 `1.1.3` 版本缺陷问题修改 `1.1.3.10`
* 修正 `elementExistence_assert()` 关键字在对“不存在元素”判断时的异常错误问题。
* 修正“html测试报告”中，用例阻塞率的不合理计算方法。
* 修正接口多文件上传时，无法识别和处理“文件替换标识”的问题。
* 修正“select下拉列表框操作关键字 `selector_operation()` ” 在使用非“纯汉字文本的列表子项text文本值”进行列表子项选择时的异常错误问题。
* 修正接口缓存数据处理方法在“接口请求参数中包含字符与非字符类型数据”时无法正确提取缓存数据的问题。
* 修正框架日志报告生成方法，在结果数据均为0的情况下无法正常生成测试报告和运行日志的问题。
* 修正复杂表单输入方法 `FormInput()` 在通过“子项文本值”对select下拉列表框子项进行选择时，无法处理非“纯汉字字符”数据的问题。
* 为所有涉及到“元素存在与否断言”的关键字加设“隐式时间等待”重置装饰器，减少静态资源浪费。
* 重写“select下拉列表框列表子项断言关键字 `selector_assert()` ”，保留原有的“select下拉列表框子项存在与否断言”逻辑并为其新增“select下拉列表框当前选中子项文本值断言”逻辑。
* 优化接口缓存数据处理方法中的“内置函数判别调用逻辑” 和 “缓存数据判别调用逻辑”，为其增设条件限制，避免不必要的资源浪费。

> 2023/06/13 `1.1.3` 版本缺陷问题修改 `1.1.3.20`
* 框架三方依赖库版本动态适配修改，避免出现三方依赖库版本失效的问题。

> 2023/07/24 本次由 `1.1.3` 版本更新为 `1.1.4` 版本
* 框架“启动方式”概念移除，动态参数配置GUI窗口移除。
* 框架“主角色概念”移除，与之相关的主角色信息替换逻辑删除。
* 框架“接口处理模块 - 辅助接口处理类 ”移除，与之相关的“调用、继承关系”、“数据文件”等删除。
* 新增功能关键字 `refresh_frame()`，用于刷新当前获得焦点的iframe页面。
* 新增功能关键字 `elementErgodicNot_assert()`， 适用于完成一个操作之后，对界面的元素的某项值进行遍历比较 - 预期值不存在。
* 新增“配置参数 - 测试用例执行区间范围指定”功能，测试人员可以通过“参数配置文件 `parameters.json (这里以框架中该文件的默认名称举例)`”来指定一个测试用例的执行区间范围(起始用例编号、结束用例编号)，框架会依据该范围来运行测试用例(起始用例和结束用例均包含在区间范围内)。
* 新增“自定义参数(动态参数)”概念，测试人员可以通过“参数配置文件 `parameters.json (这里以框架中该文件的默认名称举例)`”来指定一个或者多个自定义参数，该参数可以通过“参数名”直接在“用例”、“接口数据”和“逻辑脚本”中调用。
* 新增“用例编号有效性验证”逻辑，当所指定的用例编号在其对应的用例文件中不存在时，框架将不会运行。
* 新增默认插件集方法 `intervention_Mysql() 数据库操作方法`，支持对数据表进行“记录删除”、“记录更新”、“记录插入”操作，目前仅支持对mysql数据库做操作。
* 框架html测试报告结构修改；支持对单条用例执行结果信息进行“折叠、展开”操作，方便测试报告的阅读。另外在报告中“`异常 ABNORMAL` 和 `未通过 FAIL` ”的用例执行结果信息默认为“展开状态”，“ `通过 PASS` ”的用例执行结果信息则默认为“折叠状态”。
* 框架html测试报告结构修改；为单条测试用例名称标签元素添加title属性，避免在名称过长触发溢出隐藏机制时无法查看完整用例名称的问题。
* 重写框架默认插件集 `OA_WebUI` 中的 `personnelChoice() 人员选择组件操作方法` 和 `setDate() 日期选择组件操作方法`, 优化了其在时间等待机制方面的逻辑。
* 对默认插件集中 `OA_WebUI` 的`goto_Modular()`方法进行逻辑优化，修复其在用例中快速频繁调用时偶发出现的“元素定位异常问题”，修复其偶发的时间等待过长的问题。
* 对框架中所有支持使用“[ ]”运算符的关键字进行值处理逻辑优化。
* 框架启动参数中的用例接口处理开关位置变动，由之前的独立参数移入到用例数据集合中，全局设置变更为局部设置。
* 框架“接口处理开关”传值类型限制，非布尔型数据的情况下，框架不予处理。
* 框架“参数配置文件 `parameters.json (这里以框架中该文件的默认名称举例)`”，各项的注释说明文本做新功能适配修改。

> 2023/10/13 本次由 `1.1.4` 版本更新为 `1.1.5` 版本
* 新增依赖库 msedge-selenium-tools 用来在框架执行时设置Edge浏览器的“首选项”。
* 框架“用例二次复测”功能开启，适配缺陷问题修改。
* 对框架中的用例模板文件进行了内容更新，移除了一些不必要的解释文本。
* 修复框架内部“子模块路径注册”，转义符不准确的问题。
* 修复框架在实际使用时“Edge、Firefox、IE”浏览器无法兼容“首选项”设置的问题。
* 修复框架中“内置函数”之间嵌套关系异常的问题。
* 修复框架中“内置函数”由于参数错误导致执行异常时，框架会终止运行的问题。
* 修改框架html测试报告中“用例步骤执行结果表格”的展示形式，以适配“用例二次复测”功能。
* 新增关键字 `alert_operation()` 用于alert弹框操作。
* 新增关键字 `radioCheck_operation()` 用于“单、复选按钮”操作。
* 新增关键字 `alert_assert()` 用于对alert弹框中的提示文本进行断言。
* 新增关键字 `ternary_Judgement()` 三元判断关键字，用来控制用例步骤执行。
* 浏览器窗口关闭关键字 `quit_browser()` 名称修改为 `driver_close()`。
* 对JS操作关键字 `js_control()` 进行逻辑重写优化。
* 为窗口滚动条拖动关键字 `drag_scrollBar()` 新增功能，新增滚动条拖动结束位置指定功能。
* “用例二次复测”装饰器 `case_retry` 逻辑优化，未涉及到具体的逻辑修改。
* 用例数据读取逻辑优化，固定位置读取改为动态位置读取；使用者可在“不区分元素节点数据”的用例书写格式下，在“关键字”和“操作值”两列之间任意添加列。
* 对默认插件集`OA_WebUI` 中的`intervention_Mysql()` 数据库操作处理方法，添加自定义参数处理逻辑；可将数据库的一些基础信息书写在参数配置文件中。
* 移除框架中的 `getAttribute()` 元素指定属性值获取关键字。
* 移除框架中的 `Key_Combination()` 键盘组合键操作关键字。
* 移除“用例出错二次复测”装饰器 `case_retry`的外部调用权限。

> 2023/12/05 本次由 `1.1.5` 版本更新为 `1.1.6` 版本
* 框架关键字形参变量传参顺序优化，按照统一格式排列。
* 框架用例“元素节点数据”读取逻辑优化，支持“元素节点数据”在用例中的混编书写方式。
* 修复当python第三方库与框架内部模块重名时，无法正确引入内部模块的问题。
* 修复框架多元素索引处理逻辑，在传入的索引超出实际索引范围的情况下，会直接将索引值赋值为0的问题。
* 修复框架“包含值比较函数 `mutual_in()`”在处理非字符类型的数据时，没有正确规避异常报错的问题。
* 修复框架“包含值比较函数 `mutual_in()`”中传入“空值数据”可跳过判断逻辑，直接返还True的问题。
* 修复框架“下载导出断言关键字 `downloadExport_assert()`”在多次重复调用后引发的文件对象冲突的问题。
* 新增“特殊运算符 `**`”，与原有的`[]`运算符功能一致，均是用来在断言关键字中完成“值包含”判断。
* 新增关键字 `actionBuilder_HoldClick()` 用于处理鼠标左键按住操作，与`actionBuilder_MoveTo()`关键字配合使用。
* 新增关键字 `actionBuilder_MoveTo()` 用于处理鼠标拖拽释放操作，与`actionBuilder_HoldClick()`关键字配合使用。
* 新增关键字 `actionBuilder_MoveOffset()` 用于处理鼠标指定坐标位置的拖拽操作。
* `switch_frame()` iframe焦点跳转关键字功能新增，支持根据指定iframe标签的src属性值进行焦点切入。
* `explain()` 日志标注说明关键字功能修改，说明内容传参变量修改，改为由用例步骤的“操作值”单元格传入。
* `elementNumber_assert()` 元素个数断言关键字逻辑优化，使其不通过特殊运算符标注也可以正确识别python表达式。
* 默认插件集`OA_WebUI` 人员选择插件方法`personnelChoice()`功能新增，支持对人员选择组件“已选”选项卡下的人员进行操作。
* 默认插件集`OA_WebUI` 新增插件方法 `personnelChoiceIteration()`；原人员选择插件方法`personnelChoice()`的功能迭代版本，兼容原方法并支持进行“人员多选”和“人员全选全删”操作。

> 2024/xx/xx (待定) 本次由 `1.1.6` 版本更新为 `1.1.7` 版本
* 新增`driver_get()` 关键字，用于动态设置当前浏览器对象的网址（被测系统地址）。
* 关键字int类型数据适配，修复偶发的由于数据类型问题导致的处理结果不准确的问题。
* 框架接口处理模块，各接口之间cookies的引用修改为继承制不再需要手动书写。
* 框架接口处理模块，接口映射数据、接口缓存数据修改为通过框架变量存储，省去频繁的文件读写过程，当接口异常终止后才会将数据存放的指定的文件中。
* 框架接口处理模块，接口二次执行原始数据修改替换逻辑支持对接口数据中的所有参数项进行修改包括接口数据集合名。
* 框架接口处理模块，涉及到文件上传的接口不再需要单独为参数项书写key键名，仅需按照顺序书写参数即可。
* 框架接口处理模块，接口数据缓存提取动词修改为小写的`cache`。
* 框架接口处理模块，文件读写，逻辑断言等统一修改为引用框架中的公共方法。